[metadata]
name = jesth
version = file: VERSION
url = https://github.com/pyrustic/jesth
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Just Extract Sections Then Hack
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    file-format
    library
    parser
    renderer
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    jesth = jesth.__main__:main
